--- a/solvd-hw3/pom.xml
+++ b/solvd-hw3/pom.xml
@@ -109,6 +109,12 @@
 			<artifactId>carina-api</artifactId>
 			<version>RELEASE</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.testng/testng -->
+		<dependency>
+			<groupId>org.testng</groupId>
+			<artifactId>testng</artifactId>
+			<version>7.8.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
