Fixed url stuff

--- a/hw3/src/main/resources/_config.properties
+++ b/hw3/src/main/resources/_config.properties
@@ -24,6 +24,7 @@ env=DEMO
 DEMO.base=https://www.gsmarena.com
 DEMO.api_url=https://jsonplaceholder.typicode.com
 STAG.api_url=
+DEMO.endpoint_url=https://jsonplaceholder.typicode.com/photos
 DEMO.soap_url=https://www.crcind.com:443/csp/samples/SOAP.Demo.cls
 #=====================================================#
 
