Initial basic test

--- a/hw3/src/main/resources/_config.properties
+++ b/hw3/src/main/resources/_config.properties
@@ -3,8 +3,8 @@
 #=====================================================#
 
 #=================== Global configuration ============#
-url=https://www.gsmarena.com
-capabilities.browserName=NULL
+url=https://www.saucedemo.com/
+capabilities.browserName=chrome
 capabilities.browserVersion=NULL
 #selenium_url=http://localhost:4444/wd/hub
 custom_capabilities=NULL
@@ -21,7 +21,7 @@ app_version=
 
 #=============== Environment configuration ===========#
 env=DEMO
-DEMO.base=https://www.gsmarena.com
+DEMO.base=https://www.saucedemo.com/
 DEMO.api_url=https://jsonplaceholder.typicode.com
 STAG.api_url=
 DEMO.soap_url=https://www.crcind.com:443/csp/samples/SOAP.Demo.cls
@@ -45,6 +45,11 @@ explicit_timeout=20
 init_retry_count=0
 init_retry_interval=1
 #=====================================================#
+
+selenium_url=http://192.168.86.215:4444
+capabilities.browserName=chrome
+capabilities.platformName=Windows 10
+DEMO.ur
 
 #uncomment and change udid and deviceName for Android test
 #============ Android Local Mobile ===================#
