--- a/hw3/pom.xml
+++ b/hw3/pom.xml
@@ -110,7 +110,11 @@
 			<artifactId>json-path</artifactId>
 			<version>2.8.0</version>
 		</dependency>
-
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>4.10.0</version>
+        </dependency>
 	</dependencies>
 
 	<build>
