Starting basics fixed

--- a/hw3/src/main/resources/_config.properties
+++ b/hw3/src/main/resources/_config.properties
@@ -4,7 +4,7 @@
 
 #=================== Global configuration ============#
 url=https://www.saucedemo.com/
-capabilities.browserName=chrome
+#capabilities.browserName=chrome
 capabilities.browserVersion=NULL
 #selenium_url=http://localhost:4444/wd/hub
 custom_capabilities=NULL
@@ -46,10 +46,9 @@ init_retry_count=0
 init_retry_interval=1
 #=====================================================#
 
-selenium_url=http://192.168.86.215:4444
+selenium_url=http://localhost:4444/wd/hub
 capabilities.browserName=chrome
 capabilities.platformName=Windows 10
-DEMO.ur
 
 #uncomment and change udid and deviceName for Android test
 #============ Android Local Mobile ===================#
