--- a/hw3/src/main/resources/_config.properties
+++ b/hw3/src/main/resources/_config.properties
@@ -4,6 +4,7 @@
 
 #=================== Global configuration ============#
 url=https://www.saucedemo.com/
+home_url=https://www.saucedemo.com/v1/inventory.html
 #capabilities.browserName=chrome
 capabilities.browserVersion=NULL
 #selenium_url=http://localhost:4444/wd/hub
