--- a/hw3/pom.xml
+++ b/hw3/pom.xml
@@ -110,6 +110,12 @@
 			<artifactId>json-path</artifactId>
 			<version>2.8.0</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.freemarker/freemarker -->
+		<dependency>
+			<groupId>org.freemarker</groupId>
+			<artifactId>freemarker</artifactId>
+			<version>2.3.32</version>
+		</dependency>
 
 	</dependencies>
 
