--- a/hw3/src/main/resources/_testdata.properties
+++ b/hw3/src/main/resources/_testdata.properties
@@ -3,3 +3,9 @@
 #===============================================================#
 
 test_credentials=test@gmail.com/{crypt:8O9iA4+f3nMzz85szmvKmQ==}
+
+good_user=standard_user
+good_pass=secret_sauce
+
+bad_user=Doriyah!
+bad_pass=Ganondorf
