--- a/hw3/pom.xml
+++ b/hw3/pom.xml
@@ -110,6 +110,13 @@
 			<artifactId>json-path</artifactId>
 			<version>2.8.0</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/io.appium/java-client -->
+		<dependency>
+			<groupId>io.appium</groupId>
+			<artifactId>java-client</artifactId>
+			<version>8.5.1</version>
+		</dependency>
+
 
 	</dependencies>
 
