--- a/hw3/src/main/resources/_config.properties
+++ b/hw3/src/main/resources/_config.properties
@@ -51,10 +51,12 @@ init_retry_interval=1
 selenium_url=http://localhost:4723/
 capabilities.automationName=uiautomator2
 #capabilities.deviceName=<phone_name>
-#capabilities.udid=<phone_udid>
+capabilities.udid=emulator-5554
 #capabilities.deviceType=phone
 capabilities.platformName=ANDROID
-capabilities.app=https://qaprosoft.s3-us-west-2.amazonaws.com/carinademoexample.apk
+capabilities.appPackage=com.google.android.contacts
+capabilities.appActivity=com.android.contacts.activities.PeopleActivity
+#capabilities.app=https://qaprosoft.s3-us-west-2.amazonaws.com/carinademoexample.apk
 #=====================================================#
 
 #uncomment and change deviceName and platformVersion for iOS test
