--- a/hw3/src/main/resources/_config.properties
+++ b/hw3/src/main/resources/_config.properties
@@ -11,6 +11,7 @@ capabilities.browserVersion=NULL
 #custom_capabilities=NULL
 #extra_capabilities=NULL
 #app_version=
+page_opening_strategy=BY_ELEMENT
 
 #desired thread count for parallel execution. If commented "thread-count" value from TestNG suite xml is used.
 #thread_count=1
