--- a/hw3/src/main/resources/_config.properties
+++ b/hw3/src/main/resources/_config.properties
@@ -49,9 +49,9 @@ init_retry_count=0
 init_retry_interval=1
 #=====================================================#
 
-selenium_url=http://localhost:4444/wd/hub
-capabilities.browserName=chrome
-capabilities.platformName=Windows 10
+#selenium_url=http://localhost:4444/wd/hub
+#capabilities.browserName=chrome
+#capabilities.platformName=Windows 10
 
 #uncomment and change udid and deviceName for Android test
 #============ Android Local Mobile ===================#
