--- a/hw3/src/main/resources/_config.properties
+++ b/hw3/src/main/resources/_config.properties
@@ -5,9 +5,7 @@
 #=================== Global configuration ============#
 
 url=https://www.saucedemo.com/
-#capabilities.browserName=chrome
 capabilities.browserVersion=NULL
-#selenium_url=http://localhost:4444/wd/hub
 #custom_capabilities=NULL
 #extra_capabilities=NULL
 #app_version=
@@ -49,20 +47,20 @@ init_retry_count=0
 init_retry_interval=1
 #=====================================================#
 
-#selenium_url=http://localhost:4444/wd/hub
-#capabilities.browserName=chrome
-#capabilities.platformName=Windows 10
+selenium_url=http://localhost:4444/wd/hub
+capabilities.browserName=chrome
+capabilities.platformName=Windows 10
 
 #uncomment and change udid and deviceName for Android test
 #============ Android Local Mobile ===================#
-selenium_url=http://localhost:4723/
-capabilities.automationName=uiautomator2
+#selenium_url=http://localhost:4723/
+#capabilities.automationName=uiautomator2
 #capabilities.deviceName=<phone_name>
-capabilities.udid=emulator-5554
+#capabilities.udid=emulator-5554
 #capabilities.deviceType=phone
-capabilities.platformName=ANDROID
-capabilities.appPackage=com.google.android.contacts
-capabilities.appActivity=com.android.contacts.activities.PeopleActivity
+#capabilities.platformName=ANDROID
+#capabilities.appPackage=com.google.android.contacts
+#capabilities.appActivity=com.android.contacts.activities.PeopleActivity
 #capabilities.app=https://qaprosoft.s3-us-west-2.amazonaws.com/carinademoexample.apk
 #=====================================================#
 
